--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Spoon-Knife</title>
+  <title>Mega Spoon-Knife</title>
   <LINK href="styles.css" rel="stylesheet" type="text/css">
+
+<link rel="stylesheet" href="normalize.css">
 </head>
+
+
 
 <body>
 
